@@ -22,7 +22,7 @@ html-clean:
 	-rm -f $(BASEDOC).html
 
 epydoc:
-	epydoc --verbose --graph=all --docformat=restructuredtext -o epydoc ../libconfix/core ../libconfix/plugins ../libconfix/frontends
+	epydoc --verbose --docformat=restructuredtext -o epydoc ../libconfix/core ../libconfix/plugins ../libconfix/frontends
 epydoc-clean:
 	-rm -rf epydoc
 
